--- a/src/components/ui/text-field/text-field.module.scss
+++ b/src/components/ui/text-field/text-field.module.scss
@@ -17,6 +17,10 @@
     &::placeholder {
       color: #A4ADBA;
       font-size: 18px;
+      @media  (max-width:768px)  {
+
+        font-size:12px;
+      }
     }
   }
 
@@ -39,3 +43,4 @@
     }
   }
 }
+
