--- a/src/components/ui/button-close/button-close.module.scss
+++ b/src/components/ui/button-close/button-close.module.scss
@@ -1,22 +1,23 @@
-a {
-  all: unset;
-  cursor: pointer;
-}
 .button {
+  width: 200px;
   color: #FFFFFF;
   font-size: 18px;
   background-color: #1D4169;
   border-radius: 30px;
   padding: 16px 28px;
   transition: background-color 0.4s;
+  display: flex;
+  justify-content: center;
+
   &:hover {
     background-color: #1a3560;
   }
+
   &:focus-visible {
     outline: 2px solid #230101;
   }
 
   & span {
-    margin-right: 37px;
+    align-items: center;
   }
 }
