--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -5,6 +5,7 @@
     .content {
       .container {
         @include container();
+        padding: 0 15px;
 
         .contentWrapper {
           display: flex;
@@ -25,6 +26,7 @@
               display: flex;
               flex-direction: column;
               align-items: center;
+
               .information__title {
                 text-transform: uppercase;
                 text-align: center;
@@ -33,12 +35,22 @@
                 color: #A4ADBA;
                 font-size: 72px;
                 margin-bottom: 8px;
+                @media (max-width: 768px) {
+                  font-size: 36px;
+                }
+                @media (max-width: 550px) {
+                  font-size: 28px;
+                }
               }
 
               .information__description {
                 max-width: 423px;
                 text-align: center;
                 font-size: 18px;
+                @media (max-width: 768px) {
+                  max-width: 286px;
+                  font-size: 16px;
+                }
               }
             }
           }
@@ -56,6 +68,9 @@
             .eventSection__text {
               font-size: 18px;
               margin-bottom: 12px;
+              @media (max-width: 768px) {
+                font-size: 16px;
+              }
             }
           }
         }
@@ -76,11 +91,38 @@
 
         .footer__field {
           width: 440px;
-
+          @media (max-width: 768px) {
+            max-width: 360px;
+          }
+          @media (max-width: 500px) {
+            max-width: 300px;
+          }
         }
       }
-
     }
   }
 
+  .leftDecoration {
+    position: absolute;
+    top: 0;
+    left: 0;
+    @media (max-width: 940px) {
+      max-width: 300px;
+      height: 200px;
+    }
+    @media (max-width: 500px) {
+      max-width: 200px;
+      height: 150px;
+    }
+  }
+  .rightDecoration {
+    position: absolute;
+    top: 0;
+    right: 0;
+    @media (max-width: 940px) {
+      max-width: 350px;
+      height: 200px;
+    }
+  }
 }
+
