--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -2,7 +2,11 @@
 
 .main {
   .mainWrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     .content {
+      flex: 1 1 auto;
       .container {
         @include container();
         padding: 0 15px;
@@ -38,9 +42,6 @@
                 @media (max-width: 768px) {
                   font-size: 36px;
                 }
-                @media (max-width: 550px) {
-                  font-size: 28px;
-                }
               }
 
               .information__description {
@@ -57,6 +58,9 @@
 
           .countdownTimer {
             margin-bottom: 76px;
+            @media (max-width: 768px) {
+              margin-bottom: 30px;
+            }
           }
 
           .eventSection {
@@ -68,6 +72,7 @@
             .eventSection__text {
               font-size: 18px;
               margin-bottom: 12px;
+              text-align: center;
               @media (max-width: 768px) {
                 font-size: 16px;
               }
@@ -111,7 +116,7 @@
       height: 200px;
     }
     @media (max-width: 500px) {
-      max-width: 200px;
+      max-width: 170px;
       height: 150px;
     }
   }
