--- a/src/pages/main/main.module.scss
+++ b/src/pages/main/main.module.scss
@@ -111,6 +111,10 @@
     position: absolute;
     top: 0;
     left: 0;
+    @media (max-width: 1200px) {
+      max-width: 330px;
+      height: 210px;
+    }
     @media (max-width: 940px) {
       max-width: 300px;
       height: 200px;
